--- a/presupuesto.html
+++ b/presupuesto.html
@@ -4,7 +4,7 @@
         <title>Ferry infoma</title>
         <meta charset="UTF-8">
         <meta name="viewport" charset="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="CSS/estilos3.CSS">
+        <link rel="stylesheet" href="estilos3.CSS">
     </head>
     <body>
         
