--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h5>Photo of me</h5>
                 <div class="fakoimg img200">Image</div>
                 <div class="item-a">
-                    <img src="Imagenes/portatil-basic.png" width="90" >
+                    <img src="portatil-basic.png" width="90" >
                 </div>
                 <h4>Portatil Basic 2011</h4>
                 <p>>Computadora, computador u ordenador1​2​3​ es una máquina electrónica</p>
