--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
                 <article>
                     <h3>Ordenador 2010</h3>
                     <div class="item-a">
-                        <img src="Imagenes/portatil-basic.png" width="290" >
+                        <img src="portatil-basic.png" width="290" >
                     </div>
                     <h4>Portatil Basic 2011</h4>
                     <h5>Title description, Dec 7, 2024</h5>
                     <div class="fakoimg img200">Image</div>
                     <div class="item-a">
-                        <img src="Imagenes/or1.jpg" width="290" >
+                        <img src="or1.jpg" width="290" >
                     </div>
                     <p>Computadora, computador u ordenador1​2​3​ es una máquina electrónica digital programable que ejecuta una serie de comandos </p>
                     <p>para procesar los datos de entrada, obteniendo convenientemente información que posteriormente se envía a las unidades de salida. Una computadora está compuesta por numerosos y diversos circuitos integrados y varios elementos de apoyo, extensión y accesorios, que en conjunto pueden ejecutar tareas diversas con suma rapidez y bajo el control de un programa (software).</p>
@@ -64,9 +64,9 @@
             <div class="footer-container">
                 <div class="footer-section-redes">
                     <h2>redes</h2>
-                    <img src="Imagenes/Instagram logo.png" width="50"> 
-                    <img src="Imagenes/Facebook logo.png" width="50">  
-                    <img src="Imagenes/X Twitter.jpg" width="50">  
+                    <img src="Instagram logo.png" width="50"> 
+                    <img src="Facebook logo.png" width="50">  
+                    <img src="X Twitter.jpg" width="50">  
                 </div>
                 <div class="footer-section About">
                     <h2>Sobre Nosotros</h2>
