--- a/presupuesto.html
+++ b/presupuesto.html
@@ -53,9 +53,9 @@
             <div class="footer-container">
                 <div class="footer-section-redes">
                     <h2>redes</h2>
-                    <img src="Imagenes/Instagram logo.png" width="50"> 
-                    <img src="Imagenes/Facebook logo.png" width="50">  
-                    <img src="Imagenes/X Twitter.jpg" width="50">  
+                    <img src="Instagram logo.png" width="50"> 
+                    <img src="Facebook logo.png" width="50">  
+                    <img src="X Twitter.jpg" width="50">  
                 </div>
                 <div class="footer-section About">
                     <h2>Sobre Nosotros</h2>
