--- a/productos.html
+++ b/productos.html
@@ -24,28 +24,28 @@
 
         <main>
             <div class="item-a">
-                <img src="Imagenes/or1.jpg" alt="imgen 01">
+                <img src="or1.jpg" alt="imgen 01">
             </div>
             <div>
-                <img src="Imagenes/or2.jpg" alt="imgen 02">
+                <img src="or2.jpg" alt="imgen 02">
             </div>
             <div class="item-b">
-                <img src="Imagenes/or3.jpg" alt="imgen 03">
+                <img src="or3.jpg" alt="imgen 03">
             </div>
             <div>
-                <img src="Imagenes/or4.png" alt="imgen 04">
+                <img src="or4.png" alt="imgen 04">
             </div>
             <div class="item-c">
-                <img src="Imagenes/or5.jpg" alt="imgen 05">
+                <img src="or5.jpg" alt="imgen 05">
             </div>
             <div>
-                <img src="Imagenes/or6.jpg" alt="imgen 06">
+                <img src="or6.jpg" alt="imgen 06">
             </div>
             <div>
-                <img src="Imagenes/or7.jpeg" alt="imgen 07">
+                <img src="or7.jpeg" alt="imgen 07">
             </div>
             <div class="item-d">
-                <img src="Imagenes/or8.jpg" alt="imgen 08">
+                <img src="or8.jpg" alt="imgen 08">
             </div>
         </main>
 
@@ -54,9 +54,9 @@
             <div class="footer-container">
                 <div class="footer-section-redes">
                     <h2>redes</h2>
-                    <img src="Imagenes/Instagram logo.png" width="50"> 
-                    <img src="Imagenes/Facebook logo.png" width="50">  
-                    <img src="Imagenes/X Twitter.jpg" width="50">  
+                    <img src="Instagram logo.png" width="50"> 
+                    <img src="Facebook logo.png" width="50">  
+                    <img src="X Twitter.jpg" width="50">  
                 </div>
                 <div class="footer-section About">
                     <h2>Sobre Nosotros</h2>
