--- a/index.html
+++ b/index.html
@@ -41,20 +41,32 @@
             <section>
                 <h2>Ordenador</h2>
                 <article>
-                    <h3>Ordenador 2010</h3>
+                    <h3>Ordenador</h3>
                     <div class="item-a">
-                        <img src="portatil-basic.png" width="290" >
+                        <img src="or8.jpg" width="290" >
                     </div>
-                    <h4>Portatil Basic 2011</h4>
+                    <h4>Portátil Gaming HP Pavilion </h4>
+                    <p>Windows 10
+                        Haz grandes cosas con confianza y la sensación de un entorno familiar como Windows, solo que mejor.2
+                        Procesador Intel® Core™ i5 de 9.ª generación
+                        Experimenta una gran mejora en el rendimiento del procesador que ofrece experiencias de juego increíbles y permite una retransmisión nítida y simultánea en tiempo real. Edita y renderiza calidad 4K genuina, y retransmite solo el mejor contenido.3
+                        Pantalla IPS FHD
+                        Disfrute de imágenes de gran nitidez desde cualquier ángulo. Gracias a los amplios ángulos de visualización de 178º y a una vibrante resolución de 1920 x 1080, disfrutará al máximo de sus contenidos favoritos.4</p>
                     <h5>Title description, Dec 7, 2024</h5>
-                    <div class="fakoimg img200">Image</div>
                     <div class="item-a">
                         <img src="or1.jpg" width="290" >
                     </div>
+                    <h4>Ordenador 2010</h4>
                     <p>Computadora, computador u ordenador1​2​3​ es una máquina electrónica digital programable que ejecuta una serie de comandos </p>
                     <p>para procesar los datos de entrada, obteniendo convenientemente información que posteriormente se envía a las unidades de salida. Una computadora está compuesta por numerosos y diversos circuitos integrados y varios elementos de apoyo, extensión y accesorios, que en conjunto pueden ejecutar tareas diversas con suma rapidez y bajo el control de un programa (software).</p>
                     <p>constituyen dos partes esenciales, el hardware, que es su estructura física (circuitos electrónicos, cables, gabinete, teclado, ratón, etc.), y el software, que es su parte intangible.</p>
-                    <br>
+                    <h5>Title description, Dec 21, 2010</h5>
+                    <div class="item-a">
+                        <img src="or3.jpg" width="290" >
+                    </div>
+                    <h4>Ordenador Gaming</h4>
+                    <p>Desempeño Presentamos los PC para juegos de la serie MASTER de PCSpecialist, perfectos para juegos y edición de vídeo a 1440p y 4K. Con procesadores Intel i7, i9 y AMD Ryzen X3D, estos PC ofrecen un rendimiento excepcional para cargas de trabajo pesadas, incluidos juegos, streaming y renderizado de vídeo. Junto con la GPU Nvidia GeForce RTX 4080 Super / 4090 / AMD RX 7900 XTX, puedes estar seguro de que el sistema podrá con todo lo que imagines.</p>
+                    <h5>Title description, Dec 27, 2024</h5>
                 </article> 
             </section>
         </div>
