--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h5>Photo of me</h5>
                 <div class="fakoimg img200">Image</div>
                 <div class="item-a">
-                    <img src="portatil-basic.png" width="90" >
+                    <img src="portatil-basic.png" width="90" height="100">
                 </div>
                 <h4>Portatil Basic 2011</h4>
                 <p>>Computadora, computador u ordenador1​2​3​ es una máquina electrónica</p>
@@ -43,7 +43,7 @@
                 <article>
                     <h3>Ordenador</h3>
                     <div class="item-a">
-                        <img src="or8.jpg" width="290" >
+                        <img src="or8.jpg" width="290" height="200">
                     </div>
                     <h4>Portátil Gaming HP Pavilion </h4>
                     <p>Windows 10
@@ -54,7 +54,7 @@
                         Disfrute de imágenes de gran nitidez desde cualquier ángulo. Gracias a los amplios ángulos de visualización de 178º y a una vibrante resolución de 1920 x 1080, disfrutará al máximo de sus contenidos favoritos.4</p>
                     <h5>Title description, Dec 7, 2024</h5>
                     <div class="item-a">
-                        <img src="or1.jpg" width="290" >
+                        <img src="or1.jpg" width="290" height="200">
                     </div>
                     <h4>Ordenador 2010</h4>
                     <p>Computadora, computador u ordenador1​2​3​ es una máquina electrónica digital programable que ejecuta una serie de comandos </p>
@@ -62,7 +62,7 @@
                     <p>constituyen dos partes esenciales, el hardware, que es su estructura física (circuitos electrónicos, cables, gabinete, teclado, ratón, etc.), y el software, que es su parte intangible.</p>
                     <h5>Title description, Dec 21, 2010</h5>
                     <div class="item-a">
-                        <img src="or3.jpg" width="290" >
+                        <img src="or3.jpg" width="290" height="200">
                     </div>
                     <h4>Ordenador Gaming</h4>
                     <p>Desempeño Presentamos los PC para juegos de la serie MASTER de PCSpecialist, perfectos para juegos y edición de vídeo a 1440p y 4K. Con procesadores Intel i7, i9 y AMD Ryzen X3D, estos PC ofrecen un rendimiento excepcional para cargas de trabajo pesadas, incluidos juegos, streaming y renderizado de vídeo. Junto con la GPU Nvidia GeForce RTX 4080 Super / 4090 / AMD RX 7900 XTX, puedes estar seguro de que el sistema podrá con todo lo que imagines.</p>
